src/test/deca/context/valid/Class7.deca
// Description:
//    Definition de class + plusieurs manipulations avec class
// Resultats:
//    OK
// 
// Historique:
//    cree le 01/01/2022

class A{
    boolean a;
    boolean b;
}

{
    A FIRST=new A();
    FIRST.a=true;
    FIRST.b=false;
}