src/test/deca/context/invalid/class15.deca
class A{
    boolean b;
}


{
    A a;
    a=true;
    
}